--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
@@ -28,7 +28,7 @@
                     </h2>
                     <ul class="dropdown">
                         <li><a href="">Lesmomenten</a></li>
-                        <li><a href="">Deadlines</a></li>
+                        <li><a href="~/Deelpagina's/Deadlines.cshtml">Deadlines</a></li>
                         <li><a href="">Examens</a></li>
                         <li><a href="">Vakantie</a></li>
                         <li><a href="">Evenementen</a></li>
@@ -36,7 +36,7 @@
                 </li>
                 <li>
                     <h2>
-                        <a href="">
+                        <a href="~/Deelpagina's/TrajectOverzicht.cshtml">
                             <img src="~/Images/traject.png" />
                             Traject
                         </a>
