--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/TrajectOverzicht.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/TrajectOverzicht.cshtml
@@ -1,22 +1,29 @@
 ﻿@{
     Layout = "~/Shared/_Layout.cshtml";
-    Page.Title = "Frieda";
+    Page.Title = "Trajectoverzicht";
+
+    if (IsPost)
+    {
+        string action = Request["action"];
+
+        if (action.Equals("login"))
+        {
+            Session["cursistNummer"] = Request["Login-CursistNummer"];
+        }
+        if (action.Equals("logout"))
+        {
+            Session["cursistNummer"] = null;
+        }
+
+
+
+    }
 
     List<Administratix.BLL.StatusTraject> Resultaat = new List<Administratix.BLL.StatusTraject>();
     List<Administratix.BLL.Module> trajectModules = new List<Administratix.BLL.Module>();
     List<Administratix.BLL.CursusResultaat> resultaten = new List<Administratix.BLL.CursusResultaat>();
     List<KeyValuePair<int, int>> voorkennisPairs = new List<KeyValuePair<int, int>>();
-    //if (IsPost)
-    //{
-    //    action = Request["action"];
-    //    if (Request["search"] != null)
-    //    {
-    //        action = "search";
-    //    }
-    //    switch (action)
-    //    {
-    //case "search":
-    //string cursistNr = Request["StatusTraject-CursistNummer"];
+
     if (Session["cursistNummer"] != null && Session["cursistNummer"] != "")
     {
         string cursistNr = Session["cursistNummer"].ToString();
@@ -34,14 +41,13 @@
         //Resultaat = Administratix.Model.StatusTraject.SelectStatusByCursistNummer(Convert.ToInt32(Request["StatusTraject-CursistNummer"]));
 
     }
-    @*}
-        }*@
+    
 }
 
 <main>
     <div id="centerContainer">
         <!-- View controller -->
-        <div class="containerLegende">
+        <div class="containerBig">
             <div class="containerTitle">
                 Legende
             </div>
@@ -71,8 +77,8 @@
         else
         {
             <div class="containerTraject">
-                <div class="itemTraject titleTraject">Naam</div>
-                <div class="itemTraject titleTraject">Voorkennis</div>
+                <div class="itemTraject containerTitle">Naam</div>
+                <div class="itemTraject containerTitle">Voorkennis</div>
                 @for (int i = 0; i < trajectModules.Count; i++)
                 {
                     Administratix.BLL.Module module = trajectModules[i];
